--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,4 +211,12 @@
     <string name="no_contributors">No contributors</string>
     <string name="contributors_fragment_title">Contributors</string>
     <string name="navigation_repos_search">Repositories</string>
+    <string name="issue_edit_milestone">Set milestone</string>
+    <string name="issue_edit_labels">Set labels</string>
+    <string name="issue_edit_assigne">Assign issue</string>
+    <string name="add_milestone">Add new milestone</string>
+    <string name="select_milestone">Select milestone</string>
+    <string name="add_milestone_hint">Milestone name</string>
+    <string name="add_milestone_description">Use Milestones to create collections of Issues and Pull Requests for a particular release or project.</string>
+    <string name="clear_milestone">Clear milestone</string>
 </resources>
