Add about libraries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,4 +219,5 @@
     <string name="add_milestone_hint">Milestone name</string>
     <string name="add_milestone_description">Use Milestones to create collections of Issues and Pull Requests for a particular release or project.</string>
     <string name="clear_milestone">Clear milestone</string>
+    <string name="navigation_repos_org">Org repositories</string>
 </resources>
