--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,4 +234,5 @@
     <string name="watch_repo">Watch repo</string>
     <string name="unwatch_repo">Unwatch repo</string>
     <string name="issue_subscription">Manage subscription</string>
+    <string name="issue_list_filter_search">Advanced filter</string>
 </resources>
