Add option to refresh current folder
https://github.com/gitskarios/Gitskarios/issues/105

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,4 +235,5 @@
     <string name="unwatch_repo">Unwatch repo</string>
     <string name="issue_subscription">Manage subscription</string>
     <string name="issue_list_filter_search">Advanced filter</string>
+    <string name="sync_folder">Refresh</string>
 </resources>
