--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,4 +239,5 @@
     <string name="ups">Ups…</string>
     <string name="issue_detail_error">There was an error loading %1$s\n%2$s</string>
     <string name="action_share_issue">Share issue</string>
+    <string name="time_ago_just_now">just now</string>
 </resources>
