--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string name="public_data">Public data</string>
     <string name="plan_data">Plan</string>
     <string name="title_activity_repos">%s repositories</string>
+    <string name="title_activity_repos_starred">%s starred repositories</string>
+    <string name="title_activity_repos_watched">%s watched repositories</string>
     <string name="title_activity_orgs">%s organizations</string>
     <string name="navigation_settings">Settings</string>
     <string name="navigation_about">About</string>
@@ -255,4 +257,6 @@
     <string name="navigation_orgs_teams">teams</string>
     <string name="issue_edit_assignee">Assign to</string>
     <string name="issue_edit_labels">Set labels</string>
+    <string name="profile_starreds">Starred repositories</string>
+    <string name="profile_watched">Watched repositories</string>
 </resources>
