Issue detail color change improved, also add option to re openissue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="no_comments">No comments</string>
     <string name="addComment">Add comment</string>
     <string name="closeIssue">Close issue</string>
+    <string name="reopenIssue">Reopen issue</string>
     <string name="accept">Accept</string>
     <string name="row_private_repo">PRIVATE</string>
     <string name="tab_user_parent">User</string>
