--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,7 +267,7 @@
     <string name="overview_fragment_title">Overview</string>
     <string name="event_watched_by"><![CDATA[<b>%1$s</b> watched <b>%2$s</b>]]></string>
     <string name="event_starred_by"><![CDATA[<b>%1$s</b> starred <b>%2$s</b>]]></string>
-    <string name="event_forked_by"><![CDATA[<b>%1$s</b> forked <b>%2$s</b>]]></string>
+    <string name="event_forked_by"><![CDATA[<b>%1$s</b> forked <b>%2$s</b> to <b>%3$s</b>]]></string>
     <string name="event_issue_opened_by"><![CDATA[<b>%1$s</b> opened <b>%2$s</b>]]></string>
     <string name="event_issue_closed_by"><![CDATA[<b>%1$s</b> closed <b>%2$s</b>]]></string>
     <string name="event_created_repository_by"><![CDATA[<b>%1$s</b> created repository <b>%2$s</b>]]></string>
@@ -278,6 +278,7 @@
     <string name="event_prereleased_by"><![CDATA[<b>%1$s</b> prereleased <b>%2$s</b> at <b>%3$s</b>]]></string>
     <string name="event_released_by"><![CDATA[<b>%1$s</b> released <b>%2$s</b> at <b>%3$s</b>]]></string>
     <string name="event_select_commit">Select commit</string>
+    <string name="event_select_repository">Select repository</string>
     <string name="event_commit_comment_by"><![CDATA[<b>%1$s</b> commented on commit <b>%2$s@%3$s</b>]]></string>
     <string name="event_issue_comment_by"><![CDATA[<b>%1$s</b> commented on issue <b>%2$s#%3$d</b>]]></string>
     <string name="event_pr_comment_by"><![CDATA[<b>%1$s</b> commented on pull request <b>%2$s#%3$d</b>]]></string>
@@ -287,4 +288,5 @@
     <string name="event_pull_request_commits_add"><![CDATA[<b>%1$d</b> commits with <b>%2$d</b> additions]]></string>
     <string name="event_pull_request_commits_del"><![CDATA[<b>%1$d</b> commits with <b>%2$d</b> deletions]]></string>
     <string name="event_pull_request_commits"><![CDATA[<b>%1$d</b> commits]]></string>
+    <string name="n_more_commits">+ %d more commits</string>
 </resources>
