--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,4 +326,7 @@
     <string name="pull_requests_merged_failed">Merge failed</string>
     <string name="add_gist_file">Add file</string>
     <string name="open_issues">Open issues</string>
+    <string name="emoji_activity">Emojis</string>
+    <string name="hint_emojis_filter">Filter emojis</string>
+    <string name="add_emoji">Add emoji</string>
 </resources>
