Extra content: Emoji

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,4 +340,10 @@
     <string name="dialog_edit_issue">New feature!</string>
     <string name="dialog_edit_issue_edit_title_and_body_by_owner">As contributor / owner of this repository, you can click on the title or the description and you will be to modify them.</string>
     <string name="dialog_edit_issue_edit_title_and_body_by_author">As author of the issue, you can click on the title or the description and you will be to modify them.</string>
+    <string name="content_editor_emojis">Add emoji</string>
+    <string name="content_editor_link">Add link</string>
+    <string name="content_editor_mentions">Mentions</string>
+    <string name="content_editor_user">Mention user</string>
+    <string name="content_editor_repo">Add repository link</string>
+    <string name="content_editor_issue">Add issue link</string>
 </resources>
