Extra content: Pictures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,9 +341,13 @@
     <string name="dialog_edit_issue_edit_title_and_body_by_owner">As contributor / owner of this repository, you can click on the title or the description and you will be to modify them.</string>
     <string name="dialog_edit_issue_edit_title_and_body_by_author">As author of the issue, you can click on the title or the description and you will be to modify them.</string>
     <string name="content_editor_emojis">Add emoji</string>
-    <string name="content_editor_link">Add link</string>
+    <string name="content_editor_picture">Add picture</string>
+    <string name="content_editor_source">Add source</string>
     <string name="content_editor_mentions">Mentions</string>
     <string name="content_editor_user">Mention user</string>
     <string name="content_editor_repo">Add repository link</string>
     <string name="content_editor_issue">Add issue link</string>
+    <string name="addPicture">Add picture</string>
+    <string name="addPictureContent">Paste the url of the picture</string>
+    <string name="addPictureHint">Url</string>
 </resources>
