--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -358,4 +358,6 @@
     <string name="add_issue_body">Add description</string>
     <string name="history">History</string>
     <string name="open_in_intent">Open in …</string>
+    <string name="copy_content_url">Copy url</string>
+    <string name="url_of_copied">%s url copied</string>
 </resources>
