--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -361,4 +361,5 @@
     <string name="copy_content_url">Copy url</string>
     <string name="url_of_copied">%s url copied</string>
     <string name="content_history">%s history</string>
+    <string name="sha_copied">%s copied</string>
 </resources>
