--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,4 +365,5 @@
     <string name="aissue_detail_removed_labels">Removed labels %s</string>
     <string name="navigation_member_repos">Contributed</string>
     <string name="comment_on_diff">Commented on diff %s</string>
+    <string name="thanks_for_donate">Thanks for donate</string>
 </resources>
